--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ Saved/*
 *.log
 /UndaConstructionMate/Binaries
 /UndaConstructionMate/Build
+/UndaConstructionMate/Saved
+*.log
+/UndaConstructionMate/Saved/Logs
+/UndaConstructionMate/Intermediate
