--- a/UndaConstructionMate/Saved/Config/WindowsEditor/Engine.ini
+++ b/UndaConstructionMate/Saved/Config/WindowsEditor/Engine.ini
@@ -67,8 +67,18 @@ TunnelMulticastEndpoint=
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
+NDKPath=(Path="")
+JavaPath=(Path="")
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
