--- a/UndaConstructionMate/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UndaConstructionMate/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,8 +174,9 @@ MRUItem3=/Game/VRTemplate/Maps/VRTemplateMap
 LastLevel=/Game/Levels/GameDemoMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=Niagara
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -183,7 +184,6 @@ RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -211,14 +211,14 @@ ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
 ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
-ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=True
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces/Plush_Carpet_umonbbqdy
+ContentBrowserTab1.SelectedPaths=/Game/Particles
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -252,7 +252,7 @@ ContentBrowserDrawer.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=409.600
-WindowSize=X=1308.800 Y=748.800
+WindowSize=X=1310.400 Y=750.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1404,7 +1404,7 @@ OnlyBuildVisibility=False
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps
 BP_Template_Wall_C=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
-SceneComponent=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
+SceneComponent=
 StaticMeshActor=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
 PlayerStart=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
 CapsuleComponent=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
@@ -1433,6 +1433,7 @@ BP_P_Waterheater2_C=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent
 BP_P_Cbox_C=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
 BP_GoodSky_C=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
 AmbientSound=BP_Template_Wall_C.TransformCommon.Transform,WidgetComponent.Materials.MaterialList
+AssetViewerSettings=AssetViewerSettings.Settings.Environment
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -2560,6 +2561,7 @@ AmbientSound.HLOD=True
 AmbientSound.Physics=True
 AmbientSound.Networking=True
 AmbientSound.Actor=True
+AssetViewerSettings.Settings=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Particles/NS_Fire
@@ -2620,6 +2622,7 @@ MRUItem24=/Engine/EngineSky/VolumetricClouds/m_SimpleVolumetricCloud_Inst
 /Game/Megascans/Surfaces/Plaster_Wall_xepmej1ga/MI_Plaster_Wall_xepmej1ga_2K.MI_Plaster_Wall_xepmej1ga_2K=1
 /Game/Megascans/Surfaces/Plush_Carpet_umonbbqdy/MI_Plush_Carpet_umonbbqdy_2K.MI_Plush_Carpet_umonbbqdy_2K=1
 /Game/Megascans/Surfaces/Plaster_Wall_xepmej1ga/Plaster_Wall.Plaster_Wall=0
+/Game/Megascans/Surfaces/Stained_Ceramic_Tiles_vhqkciu/CeramicTiles.CeramicTiles=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
